--- a/config_android.ini
+++ b/config_android.ini
@@ -21,6 +21,7 @@ ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
 ruleset=🎥 奈飞视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
+ruleset=🎥 TikTok,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/TikTok.list
 ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
 ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
 ruleset=🌏 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
@@ -39,6 +40,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 节点选择`select`[]DIRECT`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇺🇲 美国节点
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=🎥 奈飞视频`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇺🇲 美国节点
+custom_proxy_group=🎥 TikTok`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇺🇲 美国节点
 custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🇨🇳 台湾节点
 custom_proxy_group=🌍 国外媒体`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇺🇲 美国节点
 custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🚀 节点选择
