--- a/config_A.ini
+++ b/config_A.ini
@@ -17,15 +17,15 @@ ruleset=应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cl
 ruleset=AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyList.list
 ruleset=AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
 ruleset=隐私防护,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
-ruleset=谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
+ruleset=FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
 ruleset=全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
-ruleset=奈飞视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
+ruleset=Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=TikTok,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/TikTok.list
-ruleset=哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
-ruleset=哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
-ruleset=国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
-ruleset=国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+ruleset=bilibili,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
+ruleset=bilibili,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
+ruleset=StreamingCN,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
+ruleset=Streaming,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ;ruleset=全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 ruleset=全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
@@ -33,29 +33,29 @@ ruleset=全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cl
 ruleset=全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ;ruleset=全球直连,[]GEOIP,LAN
 ruleset=全球直连,[]GEOIP,CN
-ruleset=漏网之鱼,[]FINAL
+ruleset=Final,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=节点选择`select`[]DIRECT`[]手动切换`[]香港节点`[]日本节点`[]狮城节点`[]台湾节点`[]美国节点
+custom_proxy_group=节点选择`select`[]DIRECT`[]手动切换`[]HK`[]JP`[]SG`[]TW`[]US
 custom_proxy_group=手动切换`select`.*
-custom_proxy_group=奈飞视频`select`[]DIRECT`[]节点选择`[]手动切换`[]香港节点`[]日本节点`[]狮城节点`[]台湾节点`[]美国节点
-custom_proxy_group=TikTok`select`[]DIRECT`[]节点选择`[]手动切换`[]香港节点`[]日本节点`[]狮城节点`[]台湾节点`[]美国节点
-custom_proxy_group=哔哩哔哩`select`[]全球直连`[]台湾节点
-custom_proxy_group=国外媒体`select`[]DIRECT`[]节点选择`[]手动切换`[]香港节点`[]日本节点`[]狮城节点`[]台湾节点`[]美国节点
-custom_proxy_group=国内媒体`select`[]DIRECT`[]节点选择
-custom_proxy_group=谷歌FCM`select`[]DIRECT`[]节点选择`[]手动切换`[]香港节点`[]日本节点`[]狮城节点`[]台湾节点`[]美国节点
+custom_proxy_group=Netflix`select`[]DIRECT`[]节点选择`[]手动切换`[]HK`[]JP`[]SG`[]TW`[]US
+custom_proxy_group=TikTok`select`[]DIRECT`[]节点选择`[]手动切换`[]HK`[]JP`[]SG`[]TW`[]US
+custom_proxy_group=bilibili`select`[]全球直连`[]台湾节点
+custom_proxy_group=Streaming`select`[]DIRECT`[]节点选择`[]手动切换`[]HK`[]JP`[]SG`[]TW`[]US
+custom_proxy_group=StreamingCN`select`[]DIRECT`[]节点选择
+custom_proxy_group=FCM`select`[]DIRECT`[]节点选择`[]手动切换`[]HK`[]JP`[]SG`[]TW`[]US
 custom_proxy_group=全球直连`select`[]DIRECT`[]节点选择
 custom_proxy_group=广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=隐私防护`select`[]REJECT`[]DIRECT
-custom_proxy_group=漏网之鱼`select`[]DIRECT`[]节点选择`[]手动切换`[]香港节点`[]日本节点`[]狮城节点`[]台湾节点`[]美国节点
-custom_proxy_group=香港节点`select`(港|HK|Hong Kong)
-custom_proxy_group=日本节点`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)
-custom_proxy_group=狮城节点`select`(新加坡|坡|狮城|SG|Singapore)
-custom_proxy_group=台湾节点`select`(台|新北|彰化|TW|Taiwan)
-custom_proxy_group=美国节点`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
+custom_proxy_group=Final`select`[]DIRECT`[]节点选择`[]手动切换`[]HK`[]JP`[]SG`[]TW`[]US
+custom_proxy_group=HK`select`(港|HK|Hong Kong)
+custom_proxy_group=JP`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)
+custom_proxy_group=SG`select`(新加坡|坡|狮城|SG|Singapore)
+custom_proxy_group=TW`select`(台|新北|彰化|TW|Taiwan)
+custom_proxy_group=US`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
 ;设置分组标志位
 
 enable_rule_generator=true
