--- a/config_A.ini
+++ b/config_A.ini
@@ -10,16 +10,16 @@
 ;增强国外GFW：支持
 
 ;设置规则标志位
-ruleset=全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-ruleset=全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
-ruleset=广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
-ruleset=应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
+ruleset=GlobalDirect,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=GlobalDirect,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+ruleset=AD,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
+ruleset=ProgramAD,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ruleset=AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyList.list
 ruleset=AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
-ruleset=隐私防护,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
+ruleset=Privacy,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
 ruleset=FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
-ruleset=全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
-ruleset=全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
+ruleset=GlobalDirect,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
+ruleset=GlobalDirect,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
 ruleset=Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=TikTok,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/TikTok.list
 ruleset=bilibili,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
@@ -27,12 +27,12 @@ ruleset=bilibili,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/
 ruleset=StreamingCN,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=Streaming,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
-;ruleset=全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
-ruleset=全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-ruleset=全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-ruleset=全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
-;ruleset=全球直连,[]GEOIP,LAN
-ruleset=全球直连,[]GEOIP,CN
+;ruleset=GlobalDirect,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
+ruleset=GlobalDirect,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+ruleset=GlobalDirect,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+ruleset=GlobalDirect,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
+;ruleset=GlobalDirect,[]GEOIP,LAN
+ruleset=GlobalDirect,[]GEOIP,CN
 ruleset=Final,[]FINAL
 ;设置规则标志位
 
@@ -41,15 +41,15 @@ custom_proxy_group=节点选择`select`[]DIRECT`[]手动切换`[]HK`[]JP`[]SG`[]
 custom_proxy_group=手动切换`select`.*
 custom_proxy_group=Netflix`select`[]DIRECT`[]节点选择`[]手动切换`[]HK`[]JP`[]SG`[]TW`[]US
 custom_proxy_group=TikTok`select`[]DIRECT`[]节点选择`[]手动切换`[]HK`[]JP`[]SG`[]TW`[]US
-custom_proxy_group=bilibili`select`[]全球直连`[]台湾节点
+custom_proxy_group=bilibili`select`[]GlobalDirect`[]台湾节点
 custom_proxy_group=Streaming`select`[]DIRECT`[]节点选择`[]手动切换`[]HK`[]JP`[]SG`[]TW`[]US
 custom_proxy_group=StreamingCN`select`[]DIRECT`[]节点选择
 custom_proxy_group=FCM`select`[]DIRECT`[]节点选择`[]手动切换`[]HK`[]JP`[]SG`[]TW`[]US
-custom_proxy_group=全球直连`select`[]DIRECT`[]节点选择
-custom_proxy_group=广告拦截`select`[]REJECT`[]DIRECT
-custom_proxy_group=应用净化`select`[]REJECT`[]DIRECT
+custom_proxy_group=GlobalDirect`select`[]DIRECT`[]节点选择
+custom_proxy_group=AD`select`[]REJECT`[]DIRECT
+custom_proxy_group=ProgramAD`select`[]REJECT`[]DIRECT
 custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT
-custom_proxy_group=隐私防护`select`[]REJECT`[]DIRECT
+custom_proxy_group=Privacy`select`[]REJECT`[]DIRECT
 custom_proxy_group=Final`select`[]DIRECT`[]节点选择`[]手动切换`[]HK`[]JP`[]SG`[]TW`[]US
 custom_proxy_group=HK`select`(港|HK|Hong Kong)
 custom_proxy_group=JP`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)
