--- a/config_A.ini
+++ b/config_A.ini
@@ -26,7 +26,7 @@ ruleset=bilibili,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/
 ruleset=bilibili,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
 ruleset=StreamingCN,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=Streaming,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-ruleset=节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+ruleset=Proxy,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ;ruleset=GlobalDirect,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 ruleset=GlobalDirect,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=GlobalDirect,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
@@ -37,20 +37,20 @@ ruleset=Final,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=节点选择`select`[]DIRECT`[]手动切换`[]HK`[]JP`[]SG`[]TW`[]US
-custom_proxy_group=手动切换`select`.*
-custom_proxy_group=Netflix`select`[]DIRECT`[]节点选择`[]手动切换`[]HK`[]JP`[]SG`[]TW`[]US
-custom_proxy_group=TikTok`select`[]DIRECT`[]节点选择`[]手动切换`[]HK`[]JP`[]SG`[]TW`[]US
-custom_proxy_group=bilibili`select`[]GlobalDirect`[]台湾节点
-custom_proxy_group=Streaming`select`[]DIRECT`[]节点选择`[]手动切换`[]HK`[]JP`[]SG`[]TW`[]US
-custom_proxy_group=StreamingCN`select`[]DIRECT`[]节点选择
-custom_proxy_group=FCM`select`[]DIRECT`[]节点选择`[]手动切换`[]HK`[]JP`[]SG`[]TW`[]US
-custom_proxy_group=GlobalDirect`select`[]DIRECT`[]节点选择
+custom_proxy_group=Proxy`select`[]DIRECT`[]Selected`[]HK`[]JP`[]SG`[]TW`[]US
+custom_proxy_group=Selected`select`.*
+custom_proxy_group=Netflix`select`[]DIRECT`[]Proxy`[]Selected`[]HK`[]JP`[]SG`[]TW`[]US
+custom_proxy_group=TikTok`select`[]DIRECT`[]Proxy`[]Selected`[]HK`[]JP`[]SG`[]TW`[]US
+custom_proxy_group=bilibili`select`[]GlobalDirect`[]TW
+custom_proxy_group=Streaming`select`[]DIRECT`[]Proxy`[]Selected`[]HK`[]JP`[]SG`[]TW`[]US
+custom_proxy_group=StreamingCN`select`[]DIRECT`[]Proxy
+custom_proxy_group=FCM`select`[]DIRECT`[]Proxy`[]Selected`[]HK`[]JP`[]SG`[]TW`[]US
+custom_proxy_group=GlobalDirect`select`[]DIRECT`[]Proxy
 custom_proxy_group=AD`select`[]REJECT`[]DIRECT
 custom_proxy_group=ProgramAD`select`[]REJECT`[]DIRECT
 custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=Privacy`select`[]REJECT`[]DIRECT
-custom_proxy_group=Final`select`[]DIRECT`[]节点选择`[]手动切换`[]HK`[]JP`[]SG`[]TW`[]US
+custom_proxy_group=Final`select`[]DIRECT`[]Proxy`[]Selected`[]HK`[]JP`[]SG`[]TW`[]US
 custom_proxy_group=HK`select`(港|HK|Hong Kong)
 custom_proxy_group=JP`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)
 custom_proxy_group=SG`select`(新加坡|坡|狮城|SG|Singapore)
