--- a/config_A.ini
+++ b/config_A.ini
@@ -12,11 +12,11 @@
 ;设置规则标志位
 ruleset=GlobalDirect,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=GlobalDirect,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
-ruleset=AD,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
-ruleset=AD,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-ruleset=AD,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyList.list
-ruleset=AD,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
-ruleset=AD,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
+ruleset=Advertising,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
+ruleset=Advertising,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
+ruleset=Advertising,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyList.list
+ruleset=Advertising,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
+ruleset=Advertising,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
 ruleset=FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
 ruleset=GlobalDirect,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=GlobalDirect,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
@@ -46,7 +46,7 @@ custom_proxy_group=Streaming`select`[]DIRECT`[]Proxy`[]Selected`[]HK`[]JP`[]SG`[
 custom_proxy_group=StreamingCN`select`[]DIRECT`[]Proxy
 custom_proxy_group=FCM`select`[]DIRECT`[]Proxy`[]Selected`[]HK`[]JP`[]SG`[]TW`[]US
 custom_proxy_group=GlobalDirect`select`[]DIRECT`[]Proxy
-custom_proxy_group=AD`select`[]REJECT`[]DIRECT
+custom_proxy_group=Advertising`select`[]REJECT`[]DIRECT
 custom_proxy_group=Final`select`[]DIRECT`[]Proxy`[]Selected`[]HK`[]JP`[]SG`[]TW`[]US
 custom_proxy_group=HK`select`(港|HK|Hong Kong)
 custom_proxy_group=JP`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)
