--- a/config_a.ini
+++ b/config_a.ini
@@ -37,17 +37,17 @@ ruleset=Final,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=Proxy`select`[]DIRECT`[]Selected`[]HK`[]JP`[]SG`[]TW`[]US
-custom_proxy_group=Selected`select`.*
-custom_proxy_group=Netflix`select`[]DIRECT`[]Proxy`[]Selected`[]HK`[]JP`[]SG`[]TW`[]US
-custom_proxy_group=TikTok`select`[]DIRECT`[]Proxy`[]Selected`[]HK`[]JP`[]SG`[]TW`[]US
+custom_proxy_group=Proxy`select`[]DIRECT`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US
+custom_proxy_group=Selector`select`.*
+custom_proxy_group=Netflix`select`[]DIRECT`[]Proxy`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US
+custom_proxy_group=TikTok`select`[]DIRECT`[]Proxy`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US
 custom_proxy_group=bilibili`select`[]GlobalDirect`[]TW
-custom_proxy_group=Streaming`select`[]DIRECT`[]Proxy`[]Selected`[]HK`[]JP`[]SG`[]TW`[]US
+custom_proxy_group=Streaming`select`[]DIRECT`[]Proxy`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US
 custom_proxy_group=StreamingCN`select`[]DIRECT`[]Proxy
-custom_proxy_group=FCM`select`[]DIRECT`[]Proxy`[]Selected`[]HK`[]JP`[]SG`[]TW`[]US
+custom_proxy_group=FCM`select`[]DIRECT`[]Proxy`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US
 custom_proxy_group=GlobalDirect`select`[]DIRECT`[]Proxy
 custom_proxy_group=Advertising`select`[]REJECT`[]DIRECT
-custom_proxy_group=Final`select`[]DIRECT`[]Proxy`[]Selected`[]HK`[]JP`[]SG`[]TW`[]US
+custom_proxy_group=Final`select`[]DIRECT`[]Proxy`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US
 custom_proxy_group=HK`select`(港|HK|Hong Kong)
 custom_proxy_group=JP`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)
 custom_proxy_group=SG`select`(新加坡|坡|狮城|SG|Singapore)
