--- a/config_a.ini
+++ b/config_a.ini
@@ -39,6 +39,7 @@ ruleset=Final,[]FINAL
 ;设置分组标志位
 custom_proxy_group=Proxy`select`[]DIRECT`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US
 custom_proxy_group=Selector`select`.*
+custom_proxy_group=Url-test`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=Netflix`select`[]DIRECT`[]Proxy`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US
 custom_proxy_group=TikTok`select`[]DIRECT`[]Proxy`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US
 custom_proxy_group=bilibili`select`[]GlobalDirect`[]TW
