--- a/config_w&m.ini
+++ b/config_w&m.ini
@@ -38,6 +38,7 @@ ruleset=Final,[]FINAL
 ;设置分组标志位
 custom_proxy_group=Proxy`select`[]DIRECT`[]Selected`[]HK`[]JP`[]SG`[]TW`[]US
 custom_proxy_group=Selected`select`.*
+custom_proxy_group=Url-test`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=Telegram`select`[]DIRECT`[]Proxy`[]Selected`[]HK`[]JP`[]SG`[]TW`[]US
 custom_proxy_group=Youtube`select`[]DIRECT`[]Proxy`[]Selected`[]HK`[]JP`[]SG`[]TW`[]US
 custom_proxy_group=Netflix`select`[]DIRECT`[]Proxy`[]Selected`[]HK`[]JP`[]SG`[]TW`[]US
