--- a/config_a.ini
+++ b/config_a.ini
@@ -42,7 +42,7 @@ custom_proxy_group=Selector`select`.*
 custom_proxy_group=Url-test`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=Netflix`select`[]DIRECT`[]Proxy`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US
 custom_proxy_group=TikTok`select`[]DIRECT`[]Proxy`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US
-custom_proxy_group=bilibili`select`[]GlobalDirect`[]TW
+custom_proxy_group=bilibili`select`[]GlobalDirect`[]TW`[]HK
 custom_proxy_group=Streaming`select`[]DIRECT`[]Proxy`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US
 custom_proxy_group=StreamingCN`select`[]DIRECT`[]Proxy
 custom_proxy_group=FCM`select`[]DIRECT`[]Proxy`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US
