--- a/config_w&m.ini
+++ b/config_w&m.ini
@@ -42,7 +42,7 @@ custom_proxy_group=Url-test`url-test`.*`http://www.gstatic.com/generate_204`300,
 custom_proxy_group=Telegram`select`[]DIRECT`[]Proxy`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US
 custom_proxy_group=Youtube`select`[]DIRECT`[]Proxy`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US
 custom_proxy_group=Netflix`select`[]DIRECT`[]Proxy`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US
-custom_proxy_group=bilibili`select`[]GlobalDirect`[]TW
+custom_proxy_group=bilibili`select`[]GlobalDirect`[]TW`[]HK
 custom_proxy_group=Streaming`select`[]DIRECT`[]Proxy`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US
 custom_proxy_group=StreamingCN`select`[]DIRECT`[]Proxy
 custom_proxy_group=FCM`select`[]DIRECT`[]Proxy`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US
