--- a/test_adguard.ini
+++ b/test_adguard.ini
@@ -2,7 +2,7 @@
 ;不要随意改变关键字，否则会导致出错
 ;acl4SSR规则
 
-dns:
+;dns:
   enable: true
   ipv6: false
   listen: 127.0.0.1:5450
@@ -13,7 +13,30 @@ dns:
   fallback:
     - 1.1.1.1
     - 8.8.8.8
+    
+    
 
+port: 7890
+socks-port: 7891
+allow-lan: true
+mode: rule
+log-level: info
+external-controller: :9090
+dns:
+  enable: true
+  ipv6: false
+  listen: 127.0.0.1:5450
+  enhanced-mode: redir-host
+  default-nameserver:
+    - 119.29.29.29
+    - 119.28.28.28
+    - 1.0.0.1
+    - 208.67.222.222
+    - 1.2.4.8
+  nameserver:
+    - https://dns.alidns.com/dns-query
+    - https://1.1.1.1/dns-query
+    - tls://dns.adguard.com:853
 ;去广告：支持
 ;自动测速：不支持
 ;微软分流：支持
