--- a/test_adguard.ini
+++ b/test_adguard.ini
@@ -2,30 +2,18 @@
 ;不要随意改变关键字，否则会导致出错
 ;acl4SSR规则
 
-;dns:
-  enable: true
-  ipv6: false
-  listen: 127.0.0.1:5450
-  enhanced-mode: redir-host
-  nameserver:
-    - 119.29.29.29
-    - 223.5.5.5
-  fallback:
-    - 1.1.1.1
-    - 8.8.8.8
-    
-    
-
-port: 7890
-socks-port: 7891
-allow-lan: true
+port: {{ default(global.clash.http_port, "7890") }}
+socks-port: {{ default(global.clash.socks_port, "7891") }}
+allow-lan: {{ default(global.clash.allow_lan, "true") }}
 mode: rule
-log-level: info
+log-level: {{ default(global.clash.log_level, "info") }}
 external-controller: :9090
+
+{% if default(request.adg, "true") == "true" or exists("request.adg.port") %}
 dns:
   enable: true
   ipv6: false
-  listen: 127.0.0.1:5450
+  listen: 127.0.0.1:{{ default(request.adg.port, "5450") }}
   enhanced-mode: redir-host
   default-nameserver:
     - 119.29.29.29
@@ -37,6 +25,18 @@ dns:
     - https://dns.alidns.com/dns-query
     - https://1.1.1.1/dns-query
     - tls://dns.adguard.com:853
+{% endif %}
+
+{% if local.clash.new_field_name == "true" %}
+proxies: ~
+proxy-groups: ~
+rules: ~
+{% else %}
+Proxy: ~
+Proxy Group: ~
+Rule: ~
+{% endif %}
+
 ;去广告：支持
 ;自动测速：不支持
 ;微软分流：支持
