--- a/test_adguard.ini
+++ b/test_adguard.ini
@@ -1,48 +1,4 @@
 [custom]
-;不要随意改变关键字，否则会导致出错
-;acl4SSR规则
-
-port: {{ default(global.clash.http_port, "7890") }}
-socks-port: {{ default(global.clash.socks_port, "7891") }}
-allow-lan: {{ default(global.clash.allow_lan, "true") }}
-mode: rule
-log-level: {{ default(global.clash.log_level, "info") }}
-external-controller: :9090
-
-{% if default(request.adg, "true") == "true" or exists("request.adg.port") %}
-dns:
-  enable: true
-  ipv6: false
-  listen: 127.0.0.1:{{ default(request.adg.port, "5450") }}
-  enhanced-mode: redir-host
-  default-nameserver:
-    - 119.29.29.29
-    - 119.28.28.28
-    - 1.0.0.1
-    - 208.67.222.222
-    - 1.2.4.8
-  nameserver:
-    - https://dns.alidns.com/dns-query
-    - https://1.1.1.1/dns-query
-    - tls://dns.adguard.com:853
-{% endif %}
-
-{% if local.clash.new_field_name == "true" %}
-proxies: ~
-proxy-groups: ~
-rules: ~
-{% else %}
-Proxy: ~
-Proxy Group: ~
-Rule: ~
-{% endif %}
-
-;去广告：支持
-;自动测速：不支持
-;微软分流：支持
-;苹果分流：支持
-;增强中国IP段：支持
-;增强国外GFW：支持
 
 ;设置规则标志位
 ruleset=GlobalDirect,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
@@ -94,6 +50,6 @@ custom_proxy_group=US`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利
 enable_rule_generator=true
 overwrite_original_rules=true
 
-;clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
+clash_rule_base=https://gist.githubusercontent.com/tindy2013/1fa08640a9088ac8652dbd40c5d2715b/raw/clash_adg_base.yml
 
 ;luck
