--- a/test_adguard.ini
+++ b/test_adguard.ini
@@ -1,6 +1,6 @@
 [custom]
 
-clash_rule_base=https://gist.githubusercontent.com/tindy2013/1fa08640a9088ac8652dbd40c5d2715b/raw/clash_adg_base.yml
+clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
 
 
 ;设置规则标志位
