--- a/ad-clash.ini
+++ b/ad-clash.ini
@@ -1,53 +1,6 @@
 [custom]
 
-;clash_rule_base=https://gist.githubusercontent.com/tindy2013/1fa08640a9088ac8652dbd40c5d2715b/raw/clash_adg_base.yml
-
-
-
-
-clash_rule_base=
-port: {{ default(global.clash.http_port, "7890") }}
-socks-port: {{ default(global.clash.socks_port, "7891") }}
-allow-lan: {{ default(global.clash.allow_lan, "true") }}
-mode: rule
-log-level: {{ default(global.clash.log_level, "info") }}
-external-controller: :9090
-
-{% if default(request.adg, "true") == "true" or exists("request.adg.port") %}
-dns:
-  enable: true
-  ipv6: false
-  listen: 127.0.0.1:{{ default(request.adg.port, "5450") }}
-  enhanced-mode: redir-host
-  default-nameserver:
-    - 119.29.29.29
-    - 119.28.28.28
-    - 1.0.0.1
-    - 208.67.222.222
-    - 1.2.4.8
-  nameserver:
-    - https://dns.alidns.com/dns-query
-    - https://1.1.1.1/dns-query
-    - tls://dns.adguard.com:853
-{% endif %}
-
-{% if local.clash.new_field_name == "true" %}
-proxies: ~
-proxy-groups: ~
-rules: ~
-{% else %}
-Proxy: ~
-Proxy Group: ~
-Rule: ~
-{% endif %}
-
-
-
-
-
-
-
-
+clash_rule_base:https://gist.githubusercontent.com/tindy2013/1fa08640a9088ac8652dbd40c5d2715b/raw/clash_adg_base.yml
 
 
 
