--- a/config_with_Adguard.ini
+++ b/config_with_Adguard.ini
@@ -20,7 +20,7 @@ ruleset=GlobalDirect,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cl
 ruleset=GlobalDirect,[]GEOIP,CN
 ruleset=Final,[]FINAL
 
-custom_proxy_group=Proxy`select`[]DIRECT`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US
+custom_proxy_group=Proxy`select`[]DIRECT`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US`.*
 custom_proxy_group=Selector`select`.*
 custom_proxy_group=Netflix`select`[]DIRECT`[]Proxy`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US
 custom_proxy_group=TikTok`select`[]DIRECT`[]Proxy`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US
