--- a/config_with_Adguard.ini
+++ b/config_with_Adguard.ini
@@ -20,16 +20,16 @@ ruleset=GlobalDirect,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cl
 ruleset=GlobalDirect,[]GEOIP,CN
 ruleset=Final,[]FINAL
 
-custom_proxy_group=Proxy`select`[]DIRECT`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US
+custom_proxy_group=Proxy`select`[]DIRECT`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US`[]Others
 custom_proxy_group=Selector`select`.*
-custom_proxy_group=Netflix`select`[]DIRECT`[]Proxy`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US
-custom_proxy_group=TikTok`select`[]DIRECT`[]Proxy`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US
+custom_proxy_group=Netflix`select`[]DIRECT`[]Proxy`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US`[]Others
+custom_proxy_group=TikTok`select`[]DIRECT`[]Proxy`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US`[]Others
 custom_proxy_group=bilibili`select`[]GlobalDirect`[]TW`[]HK
-custom_proxy_group=Streaming`select`[]DIRECT`[]Proxy`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US
+custom_proxy_group=Streaming`select`[]DIRECT`[]Proxy`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US`[]Others
 custom_proxy_group=StreamingCN`select`[]DIRECT`[]Proxy
-custom_proxy_group=FCM`select`[]DIRECT`[]Proxy`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US
+custom_proxy_group=FCM`select`[]DIRECT`[]Proxy`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US`[]Others
 custom_proxy_group=GlobalDirect`select`[]DIRECT`[]Proxy
-custom_proxy_group=Final`select`[]DIRECT`[]Proxy`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US
+custom_proxy_group=Final`select`[]DIRECT`[]Proxy`[]Selector`[]HK`[]JP`[]SG`[]TW`[]US`[]Others
 custom_proxy_group=HK`select`(港|HK|Hong Kong)
 custom_proxy_group=JP`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)
 custom_proxy_group=SG`select`(新加坡|坡|狮城|SG|Singapore)
